Fix team member images list width not fit

--- a/src/Pages/Team/team.sass
+++ b/src/Pages/Team/team.sass
@@ -16,6 +16,7 @@
     justify-content: space-between
     align-items: center
     margin: 64px 113px
+    width: 1140px
     .profressor_group
       display: flex
       justify-content: flex-start
@@ -86,6 +87,7 @@
     justify-content: space-between
     align-items: center
     margin: 32px 113px
+    width: 1140px
     .student_group
       display: flex
       justify-content: flex-start
@@ -112,7 +114,7 @@
       flex-wrap: wrap
       .student_item_member
         width: 170px
-        margin: 0 12px 24px 12px
+        margin: 0 24px 24px 0
         text-align: left
         p
           font-family: 'Quicksand'
@@ -140,9 +142,11 @@
   .team
     padding: 20px
     .team_profressor_bar
-      margin: 40px 20px
+      margin: 40px 0px
+      width: 100%
     .team_student_bar
-      margin: 40px 20px
+      margin: 40px 0px
+      width: 100%
     .team_logo img
       width: 100%
       margin-bottom: 36px
